--- a/scss/_news.scss
+++ b/scss/_news.scss
@@ -6,17 +6,34 @@
         font-size: var(--title-size);
         margin-bottom: 50px;
 
+        @media (max-width: 991px) {
+            margin-bottom: 30px;
+        }
     }
 
     #recipeCarousel {
-        margin-bottom: 40px;
-
         .carousel-inner {
+            @media (max-width: 991px) {
+                overflow: visible;
+            }
 
             .carousel-item.active,
             .carousel-item-next,
             .carousel-item-prev {
                 display: flex
+            }
+
+            @media (max-width: 991px) {
+
+                .carousel-item-end.active,
+                .carousel-item-next {
+                    transform: translateX(77%)
+                }
+
+                .carousel-item-start.active,
+                .carousel-item-prev {
+                    transform: translateX(-77%)
+                }
             }
 
             @media (min-width: 992px) and (max-width: 1199px) {
@@ -54,6 +71,15 @@
                 background-color: $white;
 
                 @media (max-width: 991px) {
+                    &>.item:not(:first-child):after {
+                        content: '';
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        display: inline-block;
+                        background: linear-gradient(90deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 1) 20%, rgb(255, 255, 255) 60%);
+                    }
+
                     &>div {
                         display: none
                     }
@@ -64,20 +90,28 @@
                 }
 
                 .item {
-                    padding: 0 31px;
+                    display: flex;
+                    flex-direction: column;
                     flex: 0 0 auto;
                     width: 33.33333333%;
+                    padding: 0 48px;
 
                     @media (max-width: 1199px) {
                         width: 50%;
                     }
 
                     @media (max-width: 991px) {
-                        width: 100%;
+                        width: 77%;
+                        padding: 0;
+                        margin-right: 43px;
                     }
 
                     .title {
-                        height: 66px;
+                        height: 72px;
+
+                        @media (max-width: 991px) {
+                            height: 52px;
+                        }
 
                         a {
                             font-family: Days One;
@@ -88,11 +122,16 @@
                     }
 
                     .description {
-                        margin-top: 6px;
+                        margin-bottom: 25px;
+
+                        @media (max-width: 991px) {
+                            margin-bottom: 9px;
+                        }
                     }
 
                     .info {
-                        margin-top: 25px;
+                        margin-top: auto;
+                        margin-bottom: 0;
 
                         .date {
                             display: inline-block;
@@ -102,6 +141,12 @@
 
                         .link {
                             float: right;
+                            font-size: var(--news-link);
+
+                            @media (max-width: 991px) {
+                                float: unset;
+                                margin-top: 9px;
+                            }
 
                             a {
                                 text-decoration: none;
@@ -119,7 +164,6 @@
                                     margin-left: 3px;
                                     transition: 0.5s;
                                 }
-
                             }
                         }
                     }
@@ -134,6 +178,10 @@
             justify-content: end;
             margin-bottom: 0;
 
+            @media (max-width: 991px) {
+                display: none;
+            }
+
             button {
                 background-color: $blue;
                 margin: 0;
@@ -142,15 +190,53 @@
         }
 
         .side_controls {
-            width: 30px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 48px;
+            padding: 0;
+            color: #fff;
+            text-align: center;
+            background: 0 0;
+            background-color: transparent;
+            border: 0;
+            opacity: .5;
+            transition: opacity .15s ease;
+
+            &:hover {
+                color: #fff;
+                text-decoration: none;
+                outline: 0;
+                opacity: .9;
+            }
 
             .carousel-control-prev-icon {
                 background-image: url(../images/Left_arrow.svg);
+                height: 48px;
+                width: 48px;
             }
 
             .carousel-control-next-icon {
                 background-image: url(../images/Right_arrow.svg);
+                height: 48px;
+                width: 48px;
             }
+        }
+
+        .control-prev {
+            left: 0;
+
+            @media (max-width: 991px) {
+                opacity: 0;
+            }
+        }
+
+        .control-next {
+            right: 0;
         }
     }
 }
