--- a/scss/style.css
+++ b/scss/style.css
@@ -41,6 +41,7 @@
   --card-button: 22px;
   --news-title: 22px;
   --news-date: 14px;
+  --news-link: 15px;
   --steps-title: 26px;
   --time-title: 60px;
   --form-title: 17px;
@@ -972,13 +973,30 @@ body .main .news .row .title_block {
   font-size: var(--title-size);
   margin-bottom: 50px;
 }
-body .main .news .row #recipeCarousel {
-  margin-bottom: 40px;
+@media (max-width: 991px) {
+  body .main .news .row .title_block {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 991px) {
+  body .main .news .row #recipeCarousel .carousel-inner {
+    overflow: visible;
+  }
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item.active,
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item-next,
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item-prev {
   display: flex;
+}
+@media (max-width: 991px) {
+  body .main .news .row #recipeCarousel .carousel-inner .carousel-item-end.active,
+body .main .news .row #recipeCarousel .carousel-inner .carousel-item-next {
+    transform: translateX(77%);
+  }
+  body .main .news .row #recipeCarousel .carousel-inner .carousel-item-start.active,
+body .main .news .row #recipeCarousel .carousel-inner .carousel-item-prev {
+    transform: translateX(-77%);
+  }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   body .main .news .row #recipeCarousel .carousel-inner .carousel-item-end.active,
@@ -1008,6 +1026,14 @@ body .main .news .row #recipeCarousel .carousel-inner .carousel-item {
   background-color: #ffffff;
 }
 @media (max-width: 991px) {
+  body .main .news .row #recipeCarousel .carousel-inner .carousel-item > .item:not(:first-child):after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.5) 0%, rgb(255, 255, 255) 20%, rgb(255, 255, 255) 60%);
+  }
   body .main .news .row #recipeCarousel .carousel-inner .carousel-item > div {
     display: none;
   }
@@ -1016,9 +1042,11 @@ body .main .news .row #recipeCarousel .carousel-inner .carousel-item {
   }
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item {
-  padding: 0 31px;
+  display: flex;
+  flex-direction: column;
   flex: 0 0 auto;
   width: 33.33333333%;
+  padding: 0 48px;
 }
 @media (max-width: 1199px) {
   body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item {
@@ -1027,11 +1055,18 @@ body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item {
 }
 @media (max-width: 991px) {
   body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item {
-    width: 100%;
+    width: 77%;
+    padding: 0;
+    margin-right: 43px;
   }
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .title {
-  height: 66px;
+  height: 72px;
+}
+@media (max-width: 991px) {
+  body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .title {
+    height: 52px;
+  }
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .title a {
   font-family: Days One;
@@ -1040,10 +1075,16 @@ body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .titl
   color: #181818;
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .description {
-  margin-top: 6px;
+  margin-bottom: 25px;
+}
+@media (max-width: 991px) {
+  body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .description {
+    margin-bottom: 9px;
+  }
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .info {
-  margin-top: 25px;
+  margin-top: auto;
+  margin-bottom: 0;
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .info .date {
   display: inline-block;
@@ -1052,6 +1093,13 @@ body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .info
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .info .link {
   float: right;
+  font-size: var(--news-link);
+}
+@media (max-width: 991px) {
+  body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .info .link {
+    float: unset;
+    margin-top: 9px;
+  }
 }
 body .main .news .row #recipeCarousel .carousel-inner .carousel-item .item .info .link a {
   text-decoration: none;
@@ -1076,19 +1124,60 @@ body .main .news .row #recipeCarousel .carousel-indicators {
   justify-content: end;
   margin-bottom: 0;
 }
+@media (max-width: 991px) {
+  body .main .news .row #recipeCarousel .carousel-indicators {
+    display: none;
+  }
+}
 body .main .news .row #recipeCarousel .carousel-indicators button {
   background-color: #2a42cc;
   margin: 0;
   border: 0;
 }
 body .main .news .row #recipeCarousel .side_controls {
-  width: 30px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  background: 0 0;
+  background-color: transparent;
+  border: 0;
+  opacity: 0.5;
+  transition: opacity 0.15s ease;
+}
+body .main .news .row #recipeCarousel .side_controls:hover {
+  color: #fff;
+  text-decoration: none;
+  outline: 0;
+  opacity: 0.9;
 }
 body .main .news .row #recipeCarousel .side_controls .carousel-control-prev-icon {
   background-image: url(../images/Left_arrow.svg);
+  height: 48px;
+  width: 48px;
 }
 body .main .news .row #recipeCarousel .side_controls .carousel-control-next-icon {
   background-image: url(../images/Right_arrow.svg);
+  height: 48px;
+  width: 48px;
+}
+body .main .news .row #recipeCarousel .control-prev {
+  left: 0;
+}
+@media (max-width: 991px) {
+  body .main .news .row #recipeCarousel .control-prev {
+    opacity: 0;
+  }
+}
+body .main .news .row #recipeCarousel .control-next {
+  right: 0;
 }
 @media (max-width: 991px) {
   body .main .news {
@@ -1096,7 +1185,7 @@ body .main .news .row #recipeCarousel .side_controls .carousel-control-next-icon
   }
 }
 body .main .steps {
-  margin-top: 100px;
+  margin-top: 167px;
   background-color: #181818;
 }
 body .main .steps .container {
@@ -1199,6 +1288,11 @@ body .main .steps .container .row .stages .item .caption .desc li {
 }
 body .main .steps .container .row .stages .item .caption .desc li:last-child {
   margin-bottom: 0;
+}
+@media (max-width: 991px) {
+  body .main .steps {
+    margin-top: 127px;
+  }
 }
 body .main .map {
   margin-top: 100px;
