--- a/scss/_benefits.scss
+++ b/scss/_benefits.scss
@@ -28,7 +28,7 @@
                 background-color: $white;
                 box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.15);
                 margin: 15px 0;
-                height: max-content;
+                height: auto;
 
                 @media (max-width: 991px) {
                     width: 100%;
@@ -43,14 +43,23 @@
                 }
 
                 .caption {
+                    display: flex;
+                    flex-direction: column;
                     margin: 20px 38px 38px 38px;
+
+                    @media (max-width: 1399px) {
+                        margin: 19px 27px 27px 27px;
+                        height: 187.5px;
+                    }
 
                     @media (max-width: 1199px) {
                         margin: 19px 27px 27px 27px;
+                        height: 199px;
                     }
 
                     @media (max-width: 991px) {
                         margin: 20px 38px 38px 38px;
+                        height: auto;
                     }
 
                     @media (max-width: 767px) {
@@ -66,9 +75,17 @@
                         font-size: var(--benefit-text);
                         color: #8D8D8D;
                         margin-top: 15px;
+                        margin-bottom: 14px;
+
+                        p {
+                            margin-bottom: 0;
+                        }
                     }
 
                     .link {
+                        margin-bottom: 0;
+                        margin-top: auto;
+
                         a {
                             text-decoration: none;
                             font-weight: 700;
