--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,13 +1,3 @@
-    @mixin animate($animation, $duration, $method, $times) {
-        animation: $animation $duration $method $times;
-    }
-
-    @mixin keyframes($name) {
-        @keyframes #{$name} {
-            @content;
-        }
-    }
-
     .call {
         position: absolute;
         display: flex;
@@ -35,7 +25,8 @@
             box-shadow: 0 0 0 0 #2a42cc;
             transform: scale(1);
 
-            @include keyframes(pulse) {
+
+            @keyframes pulse {
                 0% {
                     transform: scale(0.95);
                     box-shadow: 0 0 0 0 #2a42ccb0;
@@ -52,7 +43,7 @@
                 }
             }
 
-            @include animate(pulse, 1.5s, linear, infinite);
+            animation: pulse 1.5s linear infinite;
         }
     }
 
@@ -71,10 +62,6 @@
                 }
             }
 
-            #nav>a {
-                display: none;
-            }
-
             .menu-button {
                 width: 46px;
                 height: 46px;
@@ -91,52 +78,30 @@
                 background-image: url(../images/hide.svg);
             }
 
-            #nav .menu li ul {
-                display: none;
-                position: absolute;
-                top: 100%;
-            }
-
-            #nav .menu li:hover ul {
-                display: flex;
-            }
-
-            @media (max-width: 1399px) {
-
-                #nav:not( :target)>a:first-of-type,
-                #nav:target>a:last-of-type {
-                    display: flex;
-                }
-
-                #nav>.menu {
-                    height: auto;
-                    display: none;
-                    position: absolute;
-                    left: 0;
-                    right: 0;
-                }
-
-                #nav:target>.menu {
-                    display: flex;
-                    width: 700px;
-                    position: absolute;
-                    top: 125px;
-                }
-
-                #nav>.menu>ul>li {
-                    width: 100%;
-                    float: none;
-                }
-            }
-
             #nav {
                 display: flex;
                 margin-right: 0 !important;
                 margin-left: auto;
 
+                &>a {
+                    display: none;
+                }
+
                 @media (max-width: 1399px) {
                     order: 3;
                     margin-left: 30px;
+
+                    &:not(:target)>a:first-of-type,
+                    &:target>a:last-of-type {
+                        display: flex;
+                    }
+
+                    &:target>.menu {
+                        display: flex;
+                        width: 700px;
+                        position: absolute;
+                        top: 125px;
+                    }
                 }
 
                 @media (max-width: 767px) {
@@ -153,6 +118,9 @@
                         box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.15);
                         margin-left: -120px;
                         height: 100vh;
+                        display: none;
+                        left: 0;
+                        right: 0;
                     }
 
                     @media (max-width: 991px) {
@@ -163,6 +131,20 @@
                     @media (max-width: 767px) {
                         width: calc(100vw + 120px) !important;
                         flex-direction: column;
+                    }
+
+                    li {
+                        ul {
+                            display: none;
+                            position: absolute;
+                            top: 100%;
+                        }
+                    }
+
+                    li:hover {
+                        ul {
+                            display: flex;
+                        }
                     }
 
                     .menu-list {
@@ -201,6 +183,7 @@
                                 height: auto;
                                 margin-bottom: 20px;
                                 width: 100%;
+                                float: none;
                             }
 
                             @media (min-width: 1199px) and (max-width: 1399px) {
