--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,6 +8,10 @@
             &:nth-child(4) {
                 a {
                     font-weight: 700 !important;
+                    svg{
+                        width: 28px;
+                        margin-right: 8px;
+                    }
                 }
             }
 
